src/styles/global.css
@font-face {
    font-family: "Inter";
    src: url("/fonts/Inter.var-subset.woff2") format("woff2");
    font-weight: 100 900;
    font-display: swap;
    font-style: normal;
    font-named-instance: "Regular";
}

html {
    min-height: 100vh;
    min-height: -webkit-fill-available;
    min-height: -moz-available;
    min-height: stretch;
    min-height: fill-available;
    min-height: 100dvh;
}

body {
    --horizontal-margin: 20%;

    width: 100%;
    min-height: 100vh;
    min-height: -webkit-fill-available;
    min-height: -moz-available;
    min-height: stretch;
    min-height: fill-available;
    min-height: 100dvh;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

@media screen and (max-width: 800px) {
    body {
        --horizontal-margin: 5%;
    }
}

html {
    font-family: Inter, system-ui, sans-serif;
}

p {
    line-height: 1.75em;
    margin: 1rem 0;
}

.non-bold {
    font-weight: 400;
}

/* used to change theme without performing color transitions */
.disable-transitions * {
    transition: none !important;
}

::selection {
    background-color: var(--color);
    color: var(--background-color);
}

.dark ::selection {
    background-color: var(--accent);
    color: var(--background-color);
}

img::selection {
    background-color: var(--color-semi-trans);
}

.dark img::selection {
    background-color: var(--accent-semi-trans);
}

pre,
code {
    background-color: var(--surface2) !important;

    ::selection {
        background-color: var(--color) !important;
    }

    .dark ::selection {
        background-color: var(--accent) !important;
    }
}

